primeira navegacao entre componentes

--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -32,7 +32,7 @@
         <button onclick="login()">Entrar</button>
       </div>
       <div class="end-info-login">
-        <a routerLink="/cadastro">Cadastre-se</a>
+        <a (click)="cadastro()">Cadastre-se</a>
         <a>Esqueceu a senha?</a>
       </div>
     </div>
