--- a/src/app/cadastro/cadastro.component.scss
+++ b/src/app/cadastro/cadastro.component.scss
@@ -17,6 +17,14 @@ h1 {
     color: cadetblue;
 }
 
+h2 {
+    font-size: 30px;
+    height: 50px;
+    font-family: fantasy;
+    color: cadetblue;
+    margin-top: 0;
+}
+
 button {
     height: 40px;
     width: 100%;
@@ -41,7 +49,6 @@ input {
     border: solid 1px cadetblue;
     outline: none;
     padding-left: 10px;
-    margin-top: 5px;
     color: #818181;
     font-weight: bold;
     background-color: transparent;
@@ -51,6 +58,15 @@ input::placeholder {
     color: #818181;
     opacity: 0.5;
     /* Firefox */
+}
+
+input:disabled {
+    background-color: #f5f5f5;
+    border: solid 1px#d4d4d4;
+}
+
+label {
+    margin-top: 8px;
 }
 
 .error {
@@ -84,6 +100,30 @@ input::placeholder {
 
 /*# sourceMappingURL=main.css.map */
 
+.voltar-cadastro {
+    width: 120px !important;
+    background-color: #989898;
+}
+
+.voltar-cadastro:hover {
+    background-color: #666767;
+}
+
+.salvar-cadastro {
+    width: 120px !important;
+}
+
+.salvar-cadastro:hover {
+    background-color: #0a7d72;
+}
+
+.align-buttons {
+    margin-top: 24px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
 #container-cadastro {
     width: 100vw;
     height: 100vh;
@@ -96,7 +136,6 @@ input::placeholder {
 
 #content-cadastro {
     width: 300px;
-    height: 400px;
     padding: 24px;
     border-radius: 20px;
     background-color: #fff;
@@ -105,6 +144,10 @@ input::placeholder {
 
 .input-blank {
     border: solid 1px red;
+}
+
+.input-valid {
+    border: solid 1px cadetblue;
 }
 
 .button-enter {
