--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="button-enter">
-        <button onclick="login()">Entrar</button>
+        <button (click)="login()">Entrar</button>
       </div>
       <div class="end-info-login">
         <a (click)="cadastro()">Cadastre-se</a>
