--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+$primary-color: #0a7d72;
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
