validacoes reativas inputs

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,29 +1,29 @@
 <div id="container-cadastro">
     <div id="content-cadastro">
         <h2>Cadastre-se</h2>
-        <form class="form-cadastro" id="form-cadastro">
+        <div class="form-cadastro" id="form-cadastro">
             <!-- nome -->
             <label for="name">Nome:</label>
-            <input type="text" name="" placeholder="José Silva" id="name" (keydown)="verifyKeydownName($event)" (blur)="verifyName($event)" [ngClass]="{'input-blank': !nomeValido, 'input-valid': nomeValido}" />
+            <input type="text" name="" placeholder="José Silva" id="name" (keydown)="verifyKeydownName($event)" (blur)="verifyName($event)" />
             <span id="error-login" class="span-error hide">Digite seu nome e sobrenome!</span >
             <span id="error-login" class="span-error " *ngIf="!nomeValido" >Não esqueça seu nome!</span>
             <!-- email -->
             <label for="email">Email:</label>
-            <input type="email" name="email" ngModel email="true" (keydown)="verifyKeydownEmail($event)" (blur)="verifyEmail($event)" placeholder="exemplo@email.com" id="email" [ngClass]="{'input-blank': !emailValido, 'input-valid': emailValido}" />
+            <input type="email" name="email" email="true" (keydown)="verifyKeydownEmail($event)" (blur)="verifyEmail($event)" placeholder="exemplo@email.com" id="email" />
             <span id="error-login" class="span-error " *ngIf="!emailValido">Digite seu email.</span >
             <span id="error-login" class="span-error " *ngIf="!emailValidoRegx">Email inválido!</span >
               <!-- confirme email -->
             <label for="email-confirm">Confirme seu email:</label>
-            <input type="email" name=""  placeholder="exemplo@email.com"  id="email-confirm" (ngDisabled)="!emailValido" (keyup)="verifyKeydownConfEmail($event)" (blur)="verifyConfEmail($event)" placeholder="exemplo@email.com" id="email" [ngClass]="{'input-blank': !confEmailValido, 'input-valid': confEmailValido}"/>
+            <input type="email" name=""  placeholder="exemplo@email.com"  id="email-confirm" (ngDisabled)="!emailValido" (keyup)="verifyKeydownConfEmail($event)" (blur)="verifyConfEmail($event)" placeholder="exemplo@email.com" id="email"/>
             <span id="error-login" class="span-error " *ngIf="!confEmailValido">Os email estão diferentes!</span >
               <!-- senha -->
             <label for="senha">Senha</label>
-            <input type="password" placeholder="Senha" id="senha" (blur)="verifySenha($event)"  [ngClass]="{'input-blank': !senhaValida, 'input-valid': senhaValida}"/>
+            <input type="password" placeholder="Senha" id="senha" (blur)="verifySenha($event)" />
             <!-- botoes -->
             <div class="align-buttons">
               <button (click)="voltar()" class="voltar-cadastro">Voltar</button>
               <button (click)="cadastrar()" class="salvar-cadastro">Salvar</button>
             </div>
-          </form>
+          </div>
       </div>
 </div>
