--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,29 +1,47 @@
 <div id="container-cadastro">
     <div id="content-cadastro">
         <h2>Cadastre-se</h2>
-        <div class="form-cadastro" id="form-cadastro">
+        <form [formGroup]="formCadastro" class="form-cadastro" id="form-cadastro">
             <!-- nome -->
             <label for="name">Nome:</label>
-            <input type="text" name="" placeholder="José Silva" id="name" (keydown)="verifyKeydownName($event)" (blur)="verifyName($event)" />
+            <input class="input" type="text" name="" placeholder="José Silva" id="name" (blur)="verifyName($event)" formControlName='nome' [ngClass]="{'input-blank': nomeVazio && !nome?.valid , 'input-valid': !nome?.pristine && nome?.valid}" />
             <span id="error-login" class="span-error hide">Digite seu nome e sobrenome!</span >
-            <span id="error-login" class="span-error " *ngIf="!nomeValido" >Não esqueça seu nome!</span>
+            <span id="error-login" class="span-error " *ngIf="nomeVazio && !nome?.valid" >Não esqueça seu nome!</span>
             <!-- email -->
             <label for="email">Email:</label>
-            <input type="email" name="email" email="true" (keydown)="verifyKeydownEmail($event)" (blur)="verifyEmail($event)" placeholder="exemplo@email.com" id="email" />
-            <span id="error-login" class="span-error " *ngIf="!emailValido">Digite seu email.</span >
-            <span id="error-login" class="span-error " *ngIf="!emailValidoRegx">Email inválido!</span >
+            <input type="email" name="email" email="true" (keyup)="verifyEmailKd()" (blur)="verifyEmail($event)" placeholder="exemplo@email.com" id="email" formControlName='email' [ngClass]="{'input-blank': email?.pristine && emailVazio || (!email?.pristine && email?.invalid), 'input-valid':
+            !emailVazio && email?.pristine && email?.valid}" />
+            <span id="error-login" class="span-error " *ngIf="emailVazio && email?.pristine">Digite seu email.</span >
+            <span id="error-login" class="span-error " *ngIf="!email?.pristine && !email?.valid">Email inválido!</span >
               <!-- confirme email -->
             <label for="email-confirm">Confirme seu email:</label>
-            <input type="email" name=""  placeholder="exemplo@email.com"  id="email-confirm" (ngDisabled)="!emailValido" (keyup)="verifyKeydownConfEmail($event)" (blur)="verifyConfEmail($event)" placeholder="exemplo@email.com" id="email"/>
-            <span id="error-login" class="span-error " *ngIf="!confEmailValido">Os email estão diferentes!</span >
+            <input type="email" name=""  placeholder="exemplo@email.com"  id="email-confirm" (blur)="verifyConfEmail($event)" placeholder="exemplo@email.com" id="email" formControlName='confEmail'
+            [ngClass]="{'input-blank': confEmail?.pristine && confEmailVazio || (!confEmail?.pristine && email?.value !== confEmail?.value ), 'input-valid': !confEmail?.pristine && email?.value === confEmail?.value}"/>
+            <span id="error-login" class="span-error " *ngIf="confEmail?.pristine && confEmailVazio || (!confEmail?.pristine && email?.value !== confEmail?.value)">Os email estão diferentes!</span >
               <!-- senha -->
             <label for="senha">Senha</label>
-            <input type="password" placeholder="Senha" id="senha" (blur)="verifySenha($event)" />
+            <input type="password" placeholder="Senha" id="senha" (blur)="verifySenha($event)" formControlName='senha' [ngClass]="{'input-blank': senha?.pristine && senhaVazia || (!senha?.pristine && !senha?.valid) , 'input-valid': !nome?.pristine && nome?.valid}"/>
+            <span id="error-password" class="span-error" *ngIf="senha?.pristine && senhaVazia ">Digite sua senha.</span>
+            <span id="error-password" class="span-error" *ngIf="!senha?.pristine && !senha?.valid">A senha deve conter no mínimo 6 caracteres.</span>
             <!-- botoes -->
             <div class="align-buttons">
-              <button (click)="voltar()" class="voltar-cadastro">Voltar</button>
-              <button (click)="cadastrar()" class="salvar-cadastro">Salvar</button>
+                <button (click)="voltar()" class="voltar-cadastro">Voltar</button>
+                <button (click)="cadastrar()" class="salvar-cadastro">Salvar</button>
             </div>
-          </div>
-      </div>
+        </form>
+
+    </div>
+    <ul>
+
+        <b>nome</b>
+        <li>{{nome?.valid}} </li>
+        <b>email</b>
+        <li>{{email?.valid }} </li>
+        <b>conf email</b>
+        <li>{{confEmail?.valid }} </li>
+        <b>senha</b>
+        <li>{{senha?.valid }} </li>
+        <b>form</b>
+        <li>{{formCadastro.valid }}</li>
+    </ul>
 </div>
