--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -8,13 +8,15 @@
             <form [formGroup]="formLogin" class="info-login">
                 <div class="align-column">
                     <label for="login">Usuário:</label>
-                    <input class="input input-login" type="text" placeholder="Email/login" name="login" id="login" formControlName="loginEmail" [ngClass]="{'input-blank': !email?.pristine && !email?.valid, 'input-valid': !email?.pristine && email?.valid}" />
-                    <span id="error-login" class="span-error" *ngIf="!email?.pristine && !email?.valid">Digite seu email ou usuário.</span>
+                    <input class="input input-login" type="text" placeholder="Email/login" name="login" id="login" formControlName="loginEmail" (blur)="verificaEmail($event)" [ngClass]="{'input-blank': emailVazio && !email?.valid, 'input-valid': !email?.pristine && email?.valid}"
+                    />
+                    <span id="error-login" class="span-error" *ngIf="emailVazio && !email?.valid">Digite seu email ou usuário.</span>
                 </div>
                 <div class="align-column input-password">
                     <label for="login-password">Senha:</label>
-                    <input class="input" type="password" placeholder="Senha" name="login-password" id="login-password" formControlName="senha" [ngClass]="{'input-blank': !senha?.pristine && !senha?.valid, 'input-valid': !senha?.pristine && senha?.valid}" />
-                    <span id="error-password" class="span-error" *ngIf="!senha?.pristine && !senha?.valid ">Digite sua senha.</span>
+                    <input class="input" type="password" placeholder="Senha" name="login-password" id="login-password" formControlName="senha" (blur)="verificaSenha($event)" [ngClass]="{'input-blank': senhaVazia && !senha?.valid, 'input-valid': !senha?.pristine && senha?.valid}"
+                    />
+                    <span id="error-password" class="span-error" *ngIf="senhaVazia && !senha?.valid ">Digite sua senha.</span>
                 </div>
                 <div class="button-enter">
                     <button (click)="login()">Entrar</button>
@@ -26,8 +28,8 @@
             </form>
 
         </div>
-        <p>{{senha?.valid }}</p>
+        <!-- <p>{{senha?.valid }}</p>
         <p>{{senha?.pristine }}</p>
-        <p>{{formLogin.valid }}</p>
+        <p>{{formLogin.valid }}</p> -->
     </div>
 </div>
