--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
                     <p class="fin">Finanças</p>
                 </div>
                 <button id="novoRegistro" class="novo-registro">Novo</button>
+                <button (click)="authService.SignOut()">Sair</button>
                 <div id="listaOpcoes" class="lista-opcoes">
                     <li>Dashboard</li>
                     <li>Recursos</li>
