--- a/src/app/modal-feedbacks/modal-feedbacks.component.html
+++ b/src/app/modal-feedbacks/modal-feedbacks.component.html
@@ -1,15 +1,15 @@
-<div class="modal" tabindex="-1">
+<div class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Modal title</h5>
+                <h5 class="modal-title">{{Titulo}}</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <p>Modal body text goes here.</p>
+                <p>{{Mensagem}}</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="voltar()">Close</button>
                 <button type="button" class="btn btn-primary">Save changes</button>
             </div>
         </div>
