--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,9 +10,9 @@
                 <div class="btn-adicionar">
                     <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Adicionar</button>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@mdo">Conta</a></li>
-                        <li><a class="dropdown-item" href="#">...</a></li>
-                        <li><a class="dropdown-item" href="#">....</a></li>
+                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalConta" data-bs-whatever="@mdo">Conta</a></li>
+                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalDespesa" data-bs-whatever="@mdo">Despesa</a></li>
+                        <li><a class="dropdown-item" data-bs-toggle="modal" data-bs-target="#modalRecurso" data-bs-whatever="@mdo">Recurso</a></li>
                     </ul>
                 </div>
                 <button style="margin-top: 15px;" (click)="authService.SignOut()">Sair</button>
@@ -22,17 +22,58 @@
                     <li>Despesas</li>
                     <li>Contas</li>
                     <li>Cartão de crédito</li>
-
                 </div>
             </div>
-            <div class="center">
-                <app-board></app-board>
+
+            <div class="board">
+                <!-- Image and text -->
+                <nav class="navbar navbar-light bg-light">
+                    <div class="container-fluid info-User">
+                        <div class="nome-user">
+                            {{users?.displayName}} <img src="/assets/images/user.png" alt="" width="50" class=" img-user d-inline-block align-top">
+                        </div>
+                    </div>
+                </nav>
+
+                <div>
+                    <p class="titulo-contas">CONTAS</p>
+                    <div *ngFor="let conta of listaCB">
+                        <div class="card-conta">
+                            <div class="header-card-conta">
+                                <div>
+                                    <p>{{conta.banco}}</p>
+                                    <label>{{conta.nome}}</label>
+                                </div>
+                                <img class="img-banco" src="/assets/images/{{conta.banco}}.png" alt="">
+
+                            </div>
+                            <div class="valores-conta">
+                                <div>
+                                    <p id="um">Receitas</p>
+                                    <p id="dois">{{conta.saldo}}</p>
+                                </div>
+                                <div>
+                                    <p id="tres">Despesas</p>
+                                    <p id="quatro">{{conta.saldo}}</p>
+                                </div>
+                            </div>
+                            <div class="saldo-conta">
+                                <p id="um">Saldo:</p>
+                                <p id="dois">{{conta.saldo}}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
+
     </div>
+
 </div>
+
 <!-- MODAL CADASTRO CONTA -->
-<div id="modal" class="modal fade modal-fullscreen-md-down" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div id="modal" class="modal fade modal-fullscreen-md-down" id="modalConta" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -68,6 +109,124 @@
                               <option>Conta corrente</option>
                               <option>Conta poupança</option>
                             </select>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="message-text " class="col-form-label ">Descrição:</label>
+                            <textarea class="form-control " id="message-text " formControlName="descricao"></textarea>
+                        </div>
+                    </div>
+
+                </form>
+                <div class="conta-opcoes ">
+                    <a class="conta-opc-despesa " href=" ">Despesas</a>
+                    <a class="conta-opc-receita " href=" ">Receitas</a>
+                    <a class="conta-opc-transacao " href=" ">Transações</a>
+                </div>
+            </div>
+            <div class="modal-footer ">
+                <button type="button " class="btn btn-secondary " data-bs-dismiss="modal ">Cancelar</button>
+                <button type="button " class="btn btn-primary" (click)="criarConta()">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL CADASTRO DESPESA -->
+<div id="modal" class="modal fade modal-fullscreen-md-down" id="modalDespesa" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova despesa</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formadicionarConta">
+                    <label for="conta-saldo">Saldo:</label>
+                    <input type="text" id="conta-saldo" class="form-control" formControlName="saldo">
+                    <div class="row">
+
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Nome:</label>
+                            <input type="text " class="form-control " id="conta-name " formControlName="nome">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-instituicao " class="col-form-label ">Instituição financeira:</label>
+                            <select type="select " class="form-control form-select " id="conta-instituicao " formControlName="banco">
+                            <option selected>Selecione</option>
+                            <option>Santander</option>
+                            <option>Nubank</option>
+                            <option>Banco do Brasil</option>
+                            <option>BV</option>
+                          </select>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Tipo:</label>
+                            <select type="select " class="form-control form-select " id="conta-tipo " formControlName="tipo">
+                            <option selected>Selecione</option>
+                            <option>Conta corrente</option>
+                            <option>Conta poupança</option>
+                          </select>
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="message-text " class="col-form-label ">Descrição:</label>
+                            <textarea class="form-control " id="message-text " formControlName="descricao"></textarea>
+                        </div>
+                    </div>
+
+                </form>
+                <div class="conta-opcoes ">
+                    <a class="conta-opc-despesa " href=" ">Despesas</a>
+                    <a class="conta-opc-receita " href=" ">Receitas</a>
+                    <a class="conta-opc-transacao " href=" ">Transações</a>
+                </div>
+            </div>
+            <div class="modal-footer ">
+                <button type="button " class="btn btn-secondary " data-bs-dismiss="modal ">Cancelar</button>
+                <button type="button " class="btn btn-primary" (click)="criarConta()">Salvar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- MODAL CADASTRO RECURSO -->
+<div id="modal" class="modal fade modal-fullscreen-md-down" id="modalRecurso" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Novo recurso</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formadicionarConta">
+                    <label for="conta-saldo">Saldo:</label>
+                    <input type="text" id="conta-saldo" class="form-control" formControlName="saldo">
+                    <div class="row">
+
+                        <div class="mb-3 col ">
+                            <label for="conta-name " class="col-form-label">Nome:</label>
+                            <input type="text " class="form-control " id="conta-name " formControlName="nome">
+                        </div>
+                        <div class="mb-3 col ">
+                            <label for="conta-instituicao " class="col-form-label ">Instituição financeira:</label>
+                            <select type="select " class="form-control form-select " id="conta-instituicao " formControlName="banco">
+                          <option selected>Selecione</option>
+                          <option>Santander</option>
+                          <option>Nubank</option>
+                          <option>Banco do Brasil</option>
+                          <option>BV</option>
+                        </select>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="mb-3 col ">
+                            <label for="conta-tipo " class="col-form-label ">Tipo:</label>
+                            <select type="select " class="form-control form-select " id="conta-tipo " formControlName="tipo">
+                          <option selected>Selecione</option>
+                          <option>Conta corrente</option>
+                          <option>Conta poupança</option>
+                        </select>
                         </div>
                         <div class="mb-3 col ">
                             <label for="message-text " class="col-form-label ">Descrição:</label>
