--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -57,7 +57,7 @@ h1 {
 .content {
     width: 100%;
     height: 100%;
-    background-color: #e0e0e0;
+    // background-color: #e0e0e0;
 }
 
 .lateral-esquerda {
@@ -81,7 +81,7 @@ h1 {
 
 .dashboard {
     display: flex;
-    flex-direction: row;
+    // flex-direction: row;
 }
 
 .center {
@@ -108,4 +108,100 @@ h1 {
 
 .conta-opc-transacao {
     color: #5454ff;
+}
+
+.navbar {
+    width: 100%;
+    height: 80px;
+}
+
+.img-user {
+    margin-left: 15px;
+}
+
+.info-User {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.nome-user {
+    font-size: 18px;
+    font-weight: bold;
+    align-items: center;
+    display: flex;
+}
+
+.board {
+    width: 100%;
+}
+
+.card-conta {
+    background-color: #fff;
+    width: 200px;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 15px;
+    float: left;
+    box-shadow: 2px 2px 12px -1px rgba(0, 0, 0, 0.1);
+}
+
+.img-banco {
+    width: 30px;
+    height: 30px;
+    margin-right: 5px;
+}
+
+.header-card-conta {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: solid 0.5px #e0e0e0;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    p {
+        margin-left: 5px;
+        font-weight: bold;
+    }
+    label {
+        margin-left: 5px;
+    }
+}
+
+.valores-conta {
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    justify-content: space-between;
+    p {
+        font-size: 14px;
+    }
+    #dois {
+        color: darkgreen;
+        text-align: center;
+    }
+    #quatro {
+        text-align: center;
+        color: #c70707;
+    }
+}
+
+.saldo-conta {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    #um {
+        font-weight: bold;
+    }
+    #dois {
+        font-weight: bold;
+        color: #0c7ef5;
+    }
+}
+
+.titulo-contas {
+    font-weight: bold;
+    margin-left: 15px;
+    font-size: 18px;
+    margin-top: 24px;
 }
